--- a/CartaReyesMagos/app/src/main/res/layout/activity_main.xml
+++ b/CartaReyesMagos/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,23 @@
     tools:context=".MainActivity"
     >
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        app:title="Carta a los reyes magos"
+        app:titleTextColor="#FF0000"
+        app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+        android:background="#00FF00"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
+
+
     <TextView
         android:id="@+id/tvCarta"
         android:layout_width="0dp"
