--- a/CartaReyesMagos/app/src/main/res/layout/activity_main.xml
+++ b/CartaReyesMagos/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -9,7 +8,6 @@
     android:background="#D1FBD3"
     tools:context=".MainActivity"
     >
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floating_action_button"
         android:layout_width="wrap_content"
@@ -18,8 +16,8 @@
         android:layout_margin="16dp"
         android:contentDescription="Enviar carta"
         app:backgroundTint="#37E243"
-        app:srcCompat="@drawable/boton_enviar"
         app:tint="@null"
+        app:srcCompat="@drawable/boton_enviar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
@@ -37,6 +35,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/carousel_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="225dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
     <TextView
         android:id="@+id/tvCarta"
         android:layout_width="0dp"
@@ -47,9 +52,8 @@
         android:textStyle="bold"
         android:fontFamily="@font/merry_first"
         android:textColor="#FF0000"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/carousel_recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_bias="0.4"
         android:layout_marginBottom="30sp"/>
