UPD: Cambios estilos y texto resumen centrado

--- a/CartaReyesMagos/app/src/main/res/layout/activity_main.xml
+++ b/CartaReyesMagos/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:contentDescription="Enviar carta"
-        app:backgroundTint="#37E243"
+        app:backgroundTint="#214E34"
         app:tint="@null"
         app:srcCompat="@drawable/boton_enviar"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,9 +26,9 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         app:title="Carta a los reyes magos"
-        app:titleTextColor="#FF0000"
+        app:titleTextColor="@color/white"
         app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-        android:background="#00FF00"
+        android:background="#214E34"
         android:layout_height="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
         android:textSize="60sp"
         android:textStyle="bold"
         android:fontFamily="@font/merry_first"
-        android:textColor="#FF0000"
+        android:textColor="#A52422"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/carousel_recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
