--- a/CartaReyesMagos/app/src/main/res/layout/resumen_carta.xml
+++ b/CartaReyesMagos/app/src/main/res/layout/resumen_carta.xml
@@ -1,18 +1,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#D1FBD3">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
-        app:title="Carta a los reyes magos"
-        app:titleTextColor="#FF0000"
-        app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-        android:background="#00FF00"
         android:layout_height="?attr/actionBarSize"
+        android:background="#00FF00"
         android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="Carta a los reyes magos"
+        app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+        app:titleTextColor="#FF0000" />
+
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_width="400sp"
+        android:layout_height="300sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +30,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:fontFamily="@font/merry_first"
         android:text="Resumen de la carta"
-        android:textSize="18sp"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:textSize="30sp" />
 </RelativeLayout>
